[package]
name = "loshan_keyrock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tungstenite = {version = "0.19", default-features = false}
url = "2.1"
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.15"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
anyhow = { version = "1.0.71" }
prost = "0.11.9"
tonic = "0.9.2"
tokio-stream = "0.1.14"
rust_decimal = "1.30.0"


[build-dependencies]
tonic-build = "0.9.2"
